Last changes on the script

--- a/Assignment_4/data_engineering_task.ipynb
+++ b/Assignment_4/data_engineering_task.ipynb
@@ -5,6 +5,9 @@
    "metadata": {},
    "source": [
     "# Data Engineering Task Homework\n",
+    "## Name: Raul Antonio Catacora Grundy\n",
+    "## Repo for this code : https://github.com/Cerpint4xt/Advance_DS_ML_Omdena/tree/homework_4_development\n",
+    "\n",
     "## Objective:\n",
     "\n",
     "The objective of this assignment is to create a data engineering pipeline in Python and MySQL that involves ingesting data from a CSV file, preprocessing the data, storing it into a database, and creating a pipeline for this process.\n",
@@ -52,12 +55,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in c:\\users\\rcata\\anaconda3\\envs\\adv_omdena\\lib\\site-packages (2.2.1)\n",
+      "Requirement already satisfied: numpy<2,>=1.22.4 in c:\\users\\rcata\\anaconda3\\envs\\adv_omdena\\lib\\site-packages (from pandas) (1.26.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\rcata\\anaconda3\\envs\\adv_omdena\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\rcata\\anaconda3\\envs\\adv_omdena\\lib\\site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\rcata\\anaconda3\\envs\\adv_omdena\\lib\\site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\rcata\\anaconda3\\envs\\adv_omdena\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Requirement already satisfied: sqlalchemy in c:\\users\\rcata\\anaconda3\\envs\\adv_omdena\\lib\\site-packages (1.4.52)\n",
+      "Requirement already satisfied: psycopg2-binary in c:\\users\\rcata\\anaconda3\\envs\\adv_omdena\\lib\\site-packages (2.9.9)\n",
+      "Requirement already satisfied: greenlet!=0.4.17 in c:\\users\\rcata\\anaconda3\\envs\\adv_omdena\\lib\\site-packages (from sqlalchemy) (3.0.3)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install pandas\n",
-    "!pip install sqlalchemy psycopg2-binary\n"
+    "!pip install sqlalchemy psycopg2-binary"
    ]
   },
   {
@@ -104,6 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# creating the object for the connection\n",
     "engine.connect()"
    ]
   },
@@ -127,6 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# reading the csv file the sample dataset\n",
     "df_cars = pd.read_csv('car_prices.csv', parse_dates=['year', 'saledate'])\n",
     "df_cars"
    ]
@@ -137,6 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# EDA on the dataset\n",
     "df_cars.describe()"
    ]
   },
@@ -146,6 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# More EDA on the dataset\n",
     "df_cars.info"
    ]
   },
@@ -155,6 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cehcking types to parse correctly \n",
     "df_cars.dtypes"
    ]
   },
@@ -164,6 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Analysing NaN\n",
     "df_cars.isna().sum().sum()"
    ]
   },
@@ -173,6 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Removing NaN in the dataset\n",
     "df_cars_cleaned = df_cars.dropna()\n",
     "df_cars_cleaned.shape"
    ]
@@ -183,10 +209,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO parse year in year column\n",
+    "# Parse year in year column\n",
     "df_cars_cleaned['year'] = pd.to_datetime(df_cars_cleaned['year'], errors='coerce').dt.year\n",
-    "df_cars_cleaned\n",
-    "# TODO parse date to UTC in saledate"
+    "df_cars_cleaned\n"
    ]
   },
   {
@@ -195,6 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cleaning the saledate column\n",
     "df_cars_cleaned['saledate'] = df_cars_cleaned['saledate'].str[:-6]\n",
     "df_cars_cleaned"
    ]
@@ -225,6 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Ingesting to the db\n",
     "df_cars_cleaned.to_sql(name='car_prices_data', con=engine, if_exists='replace', index=False)"
    ]
   },
@@ -234,6 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Checking the ingestion \n",
     "query = \"\"\"\n",
     "SELECT * FROM car_prices_data;\n",
     "\"\"\"\n",
@@ -253,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating a new project \n",
+    "## Creating a new Dagster project \n",
     "After dagster installation it is necesary to create a project. \n",
     "Using the `dagster project scaffold --name car_prices-project`. The project will be created with the folder structure with a single dagster code location. "
    ]
