--- a/Assignment_4/data_engineering_task.ipynb
+++ b/Assignment_4/data_engineering_task.ipynb
@@ -297,9 +297,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'solid' from 'dagster' (c:\\Users\\rcata\\anaconda3\\envs\\adv_omdena\\lib\\site-packages\\dagster\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# The following is the code added to a pipelines folder to schedule the process \u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdagster\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m solid, pipeline, schedules, ScheduleDefinition, daily_schedule, ModeDefinition\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdatetime\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m datetime\n\u001b[0;32m      6\u001b[0m \u001b[38;5;129m@solid\u001b[39m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdata_processing\u001b[39m(context):\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;66;03m# Your data processing code here\u001b[39;00m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'solid' from 'dagster' (c:\\Users\\rcata\\anaconda3\\envs\\adv_omdena\\lib\\site-packages\\dagster\\__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "# The following is the code added to a pipelines folder to schedule the process \n",
     "\n",
@@ -329,6 +341,13 @@
     "def define_schedules():\n",
     "    return [daily_schedule]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
