add repo info and personal data

--- a/Assignment_5/Building_a_data_pipeline_in_python.ipynb
+++ b/Assignment_5/Building_a_data_pipeline_in_python.ipynb
@@ -7,6 +7,13 @@
     "# Building a data pipeline in Python\n",
     "## Post docker installation\n",
     "It is after docker installation that this notebook is usable. \n",
+    "\n",
+    "Name: Raul Catacora\n",
+    "\n",
+    "email: rcatagrundy@gmail.com\n",
+    "\n",
+    "repository with all the files and homework: https://github.com/Cerpint4xt/Advance_DS_ML_Omdena/tree/homework_5_development\n",
+    "\n",
     "\n"
    ]
   },
